# InterviewProject

./: .env.example  .gitignore  Makefile  README.md  dev.sh
frontend/: .cta.json  package.json
frontend/src/: routeTree.gen.ts  router.tsx
frontend/src/components/: BulkActionBar.tsx  CandidateCard.tsx  FilterMenu.tsx  ProvenanceDrawer.tsx  SchemaHealing.tsx
frontend/src/lib/: api.ts  display.ts  facets.ts
frontend/src/routes/: __root.tsx  inbox.tsx  index.tsx  recovered.tsx  schema.tsx
mock_apis/: provider_a.py  provider_b.py  provider_c.py  pyproject.toml  sample_data.py  seed_data.py
mock_apis/mock_apis/: provider_a.py  provider_b.py  provider_c.py
proxy/: aggregate.py  config.py  conflicts.py  demo_schema_drift.py  demo_seed.py  fuzzy.py  issues.py  main.py  models.py  pyproject.toml  query.py  titles.py  transform.py
proxy/ai/: __init__.py  bulk_actions.py  classify.py  client.py  merge_sim.py  nlquery.py  rootcause.py  schema_infer.py  summarize.py
proxy/providers/: __init__.py  atlas.py  beacon.py  cobalt.py
